--- a/locales/bn/common.json
+++ b/locales/bn/common.json
@@ -5,6 +5,7 @@
     "home": "হোম",
     "voice": "কণ্ঠ",
     "pest_doctor": "পোকা ডাক্তার",
+    "pest_health": "পেস্ট হেলথ",
     "analytics": "বিশ্লেষণ",
     "profile": "প্রোফাইল"
   },
