--- a/locales/mr/common.json
+++ b/locales/mr/common.json
@@ -5,6 +5,7 @@
     "home": "होम",
     "voice": "व्हॉईस",
     "pest_doctor": "कीट डॉक्टर",
+    "pest_health": "कीट आरोग्य",
     "analytics": "विश्लेषण",
     "profile": "प्रोफाइल"
   },
