--- a/locales/te/common.json
+++ b/locales/te/common.json
@@ -5,6 +5,7 @@
     "home": "హోమ్",
     "voice": "వాయిస్",
     "pest_doctor": "చీడపీడ డాక్టర్",
+    "pest_health": "పీడ్ హెల్త్",
     "analytics": "విశ్లేషణ",
     "profile": "ప్రొఫైల్"
   },
