--- a/locales/hi/common.json
+++ b/locales/hi/common.json
@@ -1,6 +1,6 @@
 {
-  "app_name": "कृषि साथी",
-  "tagline": "आपका खेती साथी",
+  "app_name": "KRISHSAATHI",
+  "tagline": "किसानों को बुद्धिमत्ता से जोड़ना",
   "navigation": {
     "home": "होम",
     "voice": "बोलें",
@@ -120,7 +120,7 @@
     "type_message": "संदेश टाइप करें..."
   },
   "weather_alert": {
-    "title": "कृषि साथी - मौसम चेतावनी",
+    "title": "KRISHSAATHI - मौसम चेतावनी",
     "stormy": "तूफान की संभावना। फसल और खुद को सुरक्षित रखें।",
     "rainy": "बारिश की संभावना। सिंचाई कम करें, जल निकासी जांचें।",
     "extreme_heat": "बहुत गर्मी। पानी और छाया का ध्यान रखें।",
