--- a/locales/hi/chatbot.json
+++ b/locales/hi/chatbot.json
@@ -1,1 +1,23 @@
-{"greeting":"नमस्ते {name}! चिंता मत करो, मैं यहाँ आपकी मदद के लिए हूँ। बस मेरे निर्देशों का पालन करें। आपकी खेती में क्या समस्या है?","ask_crop":"आप कौन सी फसल उगा रहे हैं?","ask_area":"कितने एकड़ में?","request_photo":"ठीक है, अभी मुझे अपने पौधे की एक फोटो दिखाओ ताकि मैं देख सकूँ।","analyzing":"विश्लेषण हो रहा है... कृपया प्रतीक्षा करें।","attach_image":"छवि संलग्न करें","image_attached":"छवि संलग्न","pest_identified":"✅ समस्या की पहचान हो गई! यह {pest_name} है।","language_switched":"भाषा बदल गई। अब मैं नई भाषा में जवाब दूंगा।","listening":"सुन रहा हूँ...","speak_now":"अब बोलें","help_prompt":"आप पूछ सकते हैं: मौसम, मंडी भाव, सरकारी योजनाएं, मृदा सलाह, या कीट/फसल समस्या।","weather_reply":"मौसम: ","mandi_reply":"मंडी भाव (कुछ फसलें): ","schemes_reply":"सरकारी योजनाएं: PM-Kisan, फसल बीमा, KCC, मृदा स्वास्थ्य कार्ड। विवरण के लिए डैशबोर्ड देखें।","soil_reply":"मृदा सलाह: ","pest_tip":"कीट/रोग के लिए पौधे की फोटो भेजें या फसल का नाम बताएं। नीम का तेल अक्सर मददगार होता है।","default_reply":"मैं मौसम, मंडी भाव, योजनाएं और मृदा सलाह बता सकता हूँ। क्या पूछना चाहते हैं?"}
+{
+    "greeting": "नमस्ते {name}! चिंता मत करो, मैं यहाँ आपकी मदद के लिए हूँ। बस मेरे निर्देशों का पालन करें। आपकी खेती में क्या समस्या है?",
+    "ask_crop": "आप कौन सी फसल उगा रहे हैं?",
+    "ask_area": "कितने एकड़ में?",
+    "request_photo": "ठीक है, अभी मुझे अपने पौधे की एक फोटो दिखाओ ताकि मैं देख सकूँ।",
+    "analyzing": "विश्लेषण हो रहा है... कृपया प्रतीक्षा करें।",
+    "attach_image": "छवि संलग्न करें",
+    "image_attached": "छवि संलग्न",
+    "pest_identified": "✅ समस्या की पहचान हो गई! यह {pest_name} है।",
+    "language_switched": "भाषा बदल गई। अब मैं नई भाषा में जवाब दूंगा।",
+    "listening": "सुन रहा हूँ...",
+    "speak_now": "अब बोलें",
+    "help_prompt": "आप पूछ सकते हैं: मौसम, मंडी भाव, सरकारी योजनाएं, मृदा सलाह, या कीट/फसल समस्या।",
+    "weather_reply": "मौसम: ",
+    "mandi_reply": "मंडी भाव (कुछ फसलें): ",
+    "schemes_reply": "सरकारी योजनाएं: PM-Kisan, फसल बीमा, KCC, मृदा स्वास्थ्य कार्ड। विवरण के लिए डैशबोर्ड देखें।",
+    "soil_reply": "मृदा सलाह: ",
+    "pest_tip": "कीट/रोग के लिए पौधे की फोटो भेजें या फसल का नाम बताएं। नीम का तेल अक्सर मददगार होता है।",
+    "default_reply": "मैं मौसम, मंडी भाव, योजनाएं और मृदा सलाह बता सकता हूँ। क्या पूछना चाहते हैं?",
+    "pest_prognosis_simulated": "मैंने छवि का विश्लेषण किया। यह एक स्वस्थ फसल लगती है, लेकिन कीटों पर नज़र रखें।",
+    "form_fill_help": "ज़रूर, अपनी प्रोफ़ाइल अपडेट करने के लिए बस कहें 'मेरा राज्य X है' या 'मेरा ज़िला Y है'।",
+    "profile_updated": "अपडेट किया गया: राज्य={state}, ज़िला={district}। बदलाव देखने के लिए कृपया पेज रिफ्रेश करें।"
+}
