--- a/locales/sat/common.json
+++ b/locales/sat/common.json
@@ -1,1 +1,44 @@
-{"app_name":"KrishiSaathi","tagline":"Your Farming Companion","navigation":{"home":"Home","voice":"Voice","pest_doctor":"Pest Doctor","pest_health":"Pest Health","analytics":"Analytics","profile":"Profile"},"home":{"pest_card_desc":"Get instant pest and crop advice.","mandi_card_desc":"View live prices on the dashboard."},"market":{"mandi_prices":"Mandi Prices"},"buttons":{"start":"Start","continue":"Continue","cancel":"Cancel","save":"Save","submit":"Submit","close":"Close","retry":"Retry","learn_more":"Learn More"},"messages":{"loading":"Loading...","saving":"Saving...","success":"Success!","error":"Error","offline":"You are offline","no_data":"No data available","try_again":"Please try again","language_changed":"Language changed"},"language":{"select":"Select Language","search_placeholder":"Search languages..."},"farmer":"Farmer"}
+{
+    "app_name": "KRISHSAATHI",
+    "tagline": "Connecting Farmers to Intelligence",
+    "navigation": {
+        "home": "Home",
+        "voice": "Voice",
+        "pest_doctor": "Pest Doctor",
+        "pest_health": "Pest Health",
+        "analytics": "Analytics",
+        "profile": "Profile"
+    },
+    "home": {
+        "pest_card_desc": "Get instant pest and crop advice.",
+        "mandi_card_desc": "View live prices on the dashboard."
+    },
+    "market": {
+        "mandi_prices": "Mandi Prices"
+    },
+    "buttons": {
+        "start": "Start",
+        "continue": "Continue",
+        "cancel": "Cancel",
+        "save": "Save",
+        "submit": "Submit",
+        "close": "Close",
+        "retry": "Retry",
+        "learn_more": "Learn More"
+    },
+    "messages": {
+        "loading": "Loading...",
+        "saving": "Saving...",
+        "success": "Success!",
+        "error": "Error",
+        "offline": "You are offline",
+        "no_data": "No data available",
+        "try_again": "Please try again",
+        "language_changed": "Language changed"
+    },
+    "language": {
+        "select": "Select Language",
+        "search_placeholder": "Search languages..."
+    },
+    "farmer": "Farmer"
+}
